--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.9",
+    "resend": "^6.2.2",
     "socket.io": "^4.8.1"
   }
 }
