--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
+    "googleapis": "^164.1.0",
     "gtts": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.6.0",
